syntax = "proto3";

package enginepb;

import "engine/proto/error.proto";

option go_package = "github.com/pingcap/tiflow/engine/enginepb";

enum StoreType {
    ServiceDiscovery = 0;
    SystemMetaStore = 1;
    AppMetaStore = 2;
}

message RegisterMetaStoreRequest {
    string address = 1;
    StoreType tp = 2;
}

message RegisterMetaStoreResponse {
    Error err = 1;
}

message QueryMetaStoreRequest {
    StoreType tp = 1;
}

message QueryMetaStoreResponse {
    Error err = 1;
    string address = 2;
}
